testing/Travis/testcases/Check/ShouldFail/Issue1281.adl
CONTEXT Issue1281

r[A*B]
s[C*D]

ENFORCE r := s

ENDCONTEXT

-- The types of expressions at both sides of the `:=` operator must match. In this case, they do not. Hence, this script must fail.